Reformat code
All Java reformatted