@@ -3,7 +3,6 @@ package com.microsoft.azure.search.samples.client;
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
 import com.fasterxml.jackson.annotation.PropertyAccessor;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
 import com.microsoft.azure.search.samples.demo.IndexOperation;
 import com.microsoft.azure.search.samples.index.IndexDefinition;
 import com.microsoft.azure.search.samples.options.SearchOptions;
@@ -15,18 +14,17 @@ import java.net.*;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
 public class SearchIndexClient {
     private static final String API_VERSION = "2019-05-06";
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
-
+    private static final HttpClient client = HttpClient.newHttpClient();
     private final String serviceName;
     private final String indexName;
     private final String apiKey;
-
-    private static final HttpClient client = HttpClient.newHttpClient();
 
     public SearchIndexClient(String serviceName, String indexName, String apiKey) {
         this.serviceName = serviceName;
@@ -35,7 +33,38 @@ public class SearchIndexClient {
     }
 
     private static HttpResponse<String> sendRequest(HttpRequest request) throws IOException, InterruptedException {
-       return client.send(request, HttpResponse.BodyHandlers.ofString());
+        return client.send(request, HttpResponse.BodyHandlers.ofString());
+    }
+
+    private static HttpRequest.Builder azureJsonRequestBuilder(String url, String apiKey) {
+        final var builder = HttpRequest.newBuilder();
+        builder.uri(URI.create(url));
+        builder.setHeader("content-type", "application/json");
+        builder.setHeader("api-key", apiKey);
+        return builder;
+    }
+
+    private static <T> T withHttpRetry(RetriableHttpOperation<T> r) throws IOException {
+        final var maxRetries = 3;
+        final var delayInMilliSec = 30000;
+        var count = 0;
+        T result;
+        try {
+            while (true) {
+                try {
+                    result = r.run();
+                    break;
+                } catch (HttpRetryException e) {
+                    if (++count == maxRetries) {
+                        throw e;
+                    }
+                }
+                Thread.sleep(delayInMilliSec * count);
+            }
+        } catch (InterruptedException e) {
+            throw new IOException("Interrupted during HTTP operation", e);
+        }
+        return result;
     }
 
     public boolean doesIndexExist() throws IOException, InterruptedException {
@@ -61,32 +90,24 @@ public class SearchIndexClient {
     }
 
     public IndexBatchResult indexBatch(final List<IndexOperation> operations) throws IOException {
-        var endpoint = buildIndexingUrl();
-        var requestBody = OBJECT_MAPPER.writeValueAsString(new IndexBatch(operations));
+        final var endpoint = buildIndexingUrl();
+        final var requestBody = OBJECT_MAPPER.writeValueAsString(new IndexBatch(operations));
         return withHttpRetry(() -> {
-            var request = httpPost(endpoint, requestBody).build();
-            var response = sendRequest(request);
+            final var request = httpPost(endpoint, requestBody).build();
+            final var response = sendRequest(request);
             throwOnHttpError(response);
             return OBJECT_MAPPER.readValue(response.body(), IndexBatchResult.class);
         });
     }
 
     public SearchResult search(final String search, final SearchOptions options) throws IOException {
-        var endpoint = buildSearchUrl(search, options);
+        final var endpoint = buildSearchUrl(search, options);
         return withHttpRetry(() -> {
-            var request = httpRequest(endpoint, "GET").build();
-            var response = sendRequest(request);
+            final var request = httpRequest(endpoint, "GET").build();
+            final var response = sendRequest(request);
             throwOnHttpError(response);
             return OBJECT_MAPPER.readValue(response.body(), SearchResult.class);
         });
-    }
-
-    private static HttpRequest.Builder azureJsonRequestBuilder(String url, String apiKey) {
-        var builder = HttpRequest.newBuilder();
-        builder.uri(URI.create(url));
-        builder.setHeader("content-type", "application/json");
-        builder.setHeader("api-key", apiKey);
-        return builder;
     }
 
     private HttpRequest.Builder httpRequest(String url, String method) {
@@ -105,13 +126,13 @@ public class SearchIndexClient {
     }
 
     private HttpRequest.Builder httpPost(String url, String contents) {
-        var builder = azureJsonRequestBuilder(url, this.apiKey);
+        final var builder = azureJsonRequestBuilder(url, this.apiKey);
         builder.POST(HttpRequest.BodyPublishers.ofString(contents));
         return builder;
     }
 
     private void throwOnHttpError(HttpResponse<String> response) throws IOException {
-        int code = response.statusCode();
+        var code = response.statusCode();
         if (code >= HttpURLConnection.HTTP_BAD_REQUEST) {
             String message = String.format("HTTP error. Code: %s. Message: %s", code, response.body());
             if (code == HttpURLConnection.HTTP_UNAVAILABLE) {
@@ -137,20 +158,19 @@ public class SearchIndexClient {
                 this.indexName, API_VERSION);
     }
 
-
     private String buildSearchUrl(String search, SearchOptions options) throws IOException {
-        StringBuilder url = new StringBuilder(
+        final var url = new StringBuilder(
                 String.format("https://%s.search.windows.net/indexes/%s/docs?api-version=%s&search=%s&$count=%s",
-                        this.serviceName, this.indexName, API_VERSION, URLEncoder.encode(search, "UTF-8"),
+                        this.serviceName, this.indexName, API_VERSION, URLEncoder.encode(search, StandardCharsets.UTF_8),
                         options.includeCount().orElse(false)));
         if (options.filter().isPresent()) {
-            url.append("&$filter=").append(URLEncoder.encode(options.filter().get(), "UTF-8"));
+            url.append("&$filter=").append(URLEncoder.encode(options.filter().get(), StandardCharsets.UTF_8));
         }
         if (options.orderBy().isPresent()) {
-            url.append("&$orderby=").append(URLEncoder.encode(options.orderBy().get(), "UTF-8"));
+            url.append("&$orderby=").append(URLEncoder.encode(options.orderBy().get(), StandardCharsets.UTF_8));
         }
         if (options.select().isPresent()) {
-            url.append("&$select=").append(URLEncoder.encode(options.select().get(), "UTF-8"));
+            url.append("&$select=").append(URLEncoder.encode(options.select().get(), StandardCharsets.UTF_8));
         }
         if (options.top().isPresent()) {
             url.append("&$top=").append(options.top().get());
@@ -159,28 +179,8 @@ public class SearchIndexClient {
         return url.toString();
     }
 
-
-    private static <T> T withHttpRetry(RetriableHttpOperation<T> r) throws IOException {
-        final int maxRetries = 3;
-        final int delayInMilliSec = 30000;
-        int count = 0;
-        T result;
-        try {
-            while (true) {
-                try {
-                    result = r.run();
-                    break;
-                } catch (HttpRetryException e) {
-                    if (++count == maxRetries) {
-                        throw e;
-                    }
-                }
-                Thread.sleep(delayInMilliSec * count);
-            }
-        }catch(InterruptedException e) {
-            throw new IOException("Interrupted during HTTP operation", e);
-        }
-        return result;
+    private interface RetriableHttpOperation<T> {
+        T run() throws IOException, InterruptedException;
     }
 
     private static class IndexBatch {
@@ -189,9 +189,5 @@ public class SearchIndexClient {
         IndexBatch(List<IndexOperation> operations) {
             value = new ArrayList<>(operations);
         }
-    }
-
-    private interface RetriableHttpOperation<T> {
-        T run() throws IOException, InterruptedException;
     }
 }
